  attribute checked; this continues until the attribute can no longer be found
  or segfaulting.  Recursion limit is now followed.

- Bug #1454485: Don't crash on Unicode characters <0.

- Patch #1488312, Fix memory alignment problem on SPARC in unicode

- fixed a bug with bsddb.DB.stat: the flags and txn keyword arguments
  were transposed.

Extension Modules
-----------------

- Bug #1572832: fix a bug in ISO-2022 codecs which may cause segfault
  when encoding non-BMP unicode characters.

- Fixed a few bugs in cjkcodecs:
  - gbk and gb18030 codec now handle U+30FB KATAKANA MIDDLE DOT correctly.
  - iso2022_jp_2 codec now encodes into G0 for KS X 1001, GB2312
    codepoints to conform the standard.
  - iso2022_jp_3 and iso2022_jp_2004 codec can encode JIS X 2013:2
    codepoints now.

- Bug #1556784: allow format strings longer than 127 characters in
  datetime's strftime function.

- gcmodule: add a missing incref.

- threadmodule: add a missing incref.

- Bug #1551427: fix a wrong NULL pointer check in the win32 version
  of os.urandom().

- Patch #1535500: fix segfault in BZ2File.writelines and make sure it
  raises the correct exceptions.

- Make regex engine raise MemoryError if allocating memory fails.

- Bug #1471938: Fix curses module build problem on Solaris 8; patch by
  Paul Eggert.

- Bug #1548092: fix curses.tparm() segfault on invalid input.

- cursesmodule: fix a number of reference leaks with 'python -v'; handle
  failure from PyModule_GetDict (Klocwork 208).

- Bug #1512695: cPickle.loads could crash if it was interrupted with
  a KeyboardInterrupt.

- Change binascii.hexlify() to accept any read-only buffer and not just a char
  buffer.

- Fixed a potentially invalid memory access of CJKCodecs' shift-jis decoder.

- Calling Tk_Init twice is refused if the first call failed as that
  may deadlock.

- Patch #1191065: Fix preprocessor problems on systems where recvfrom
  is a macro.
