@@ -73,6 +73,8 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Fix buffer handling in posix.confstr. 
+
 - Bug #1572832: fix a bug in ISO-2022 codecs which may cause segfault
   when encoding non-BMP unicode characters.
 
